# docs_scraper

./: .gitignore  README.md  pyproject.toml
src/docs_scraper/: __init__.py  config.py  crawl.py  fs.py  web.py
src/docs_scraper/links/: extract_links.py  rewrite_links.py
src/docs_scraper/utils/: paths.py  robots.py  urls.py
