[project]
name = "docs-scraper"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "1p22geo", email = "1p22geodecki@gmail.com" }
]
dependencies = [
    "requests>=2.32.5",
    "beautifulsoup4>=4.13.5",
    "tqdm>=4.67.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/docs_scraper"]
